# BrickSim

./: .clang-format  .gitignore  .gitmodules  .gitpod.yml  .imgbotconfig  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  InstallBuilder.xml  README.md  SECURITY.md  camera.h  config.txt  lgtm.yml  main.cpp  performance.txt  setup_workspace.ps1  setup_workspace.sh  shader.fsh  shader.vsh  update_git_statistics.sh  vcpkg_rf.txt  vendor.yml
docs/: 404.html  (+6 more)
src/: CMakeLists.txt  background_task.cpp  background_task.h  binary_file.cpp  binary_file.h  camera.cpp  camera.h  config.cpp  config.h  constants.h  controller.cpp  controller.h  custom_imconfig.h  db.cpp  db.h  editor.cpp  editor.h  element_tree.cpp  element_tree.h  fraction.cpp  fraction.h  generated_mesh.cpp  generated_mesh.h  git_stats.cpp  git_stats.h  gui.cpp  gui.h  keyboard_shortcut_manager.cpp  keyboard_shortcut_manager.h  latest_log_messages_tank.cpp  latest_log_messages_tank.h  ldr_colors.cpp  ldr_colors.h  ldr_file_repository.cpp  ldr_file_repository.h  ldr_files.cpp  ldr_files.h  ldr_objects.cpp  ldr_objects.h  main.cpp  (+40 more)
src/benchmarks/: CMakeLists.txt  benchMain.cpp  bench_ldr_quadrilateral_parse.cpp  bench_matmul.cpp  bench_triangle_clockwise_check.cpp
src/config/: CMakeLists.txt  data.cpp  data.h  read.cpp  read.h  write.cpp  write.h
src/connection/: CMakeLists.txt  accumulator.h  bounding.cpp  bounding.h  connection.cpp  connection.h  connection_check.cpp  connection_check.h  connection_graph.cpp  connection_graph.h  connector_conversion.cpp  connector_conversion.h  connector_data_provider.cpp  connector_data_provider.h  connector_data_visualizer.cpp  connector_data_visualizer.h  data.cpp  data.h  degrees_of_freedom.cpp  degrees_of_freedom.h  engine.cpp  engine.h  intersection_graph.cpp  intersection_graph.h  ldcad_snap_meta.cpp  ldcad_snap_meta.h  ldcad_snap_metas.cpp  ldcad_snap_metas.h  pair_checker.cpp  pair_checker.h
src/constant_data/: CMakeLists.txt  constants.cpp  constants.h  git_stats.cpp  resources.cpp  resources.h
src/editor/: CMakeLists.txt  editor.cpp  editor.h  tools.cpp  tools.h
src/errors/: CMakeLists.txt  exceptions.cpp  exceptions.h
src/graphics/: CMakeLists.txt  camera.cpp  camera.h  connection_visualization.cpp  connection_visualization.h  generated_mesh.cpp  generated_mesh.h  hardware_properties.cpp  hardware_properties.h  mesh.cpp  mesh.h  mesh_collection.cpp  mesh_collection.h  opengl_native_or_replacement.cpp  opengl_native_or_replacement.h  orientation_cube.cpp  orientation_cube.h  overlay_2d.cpp  overlay_2d.h  scene.cpp  scene.h  shaders.cpp  shaders.h  texmap_projection.cpp  texmap_projection.h  texture.cpp  texture.h  thumbnail_generator.cpp  thumbnail_generator.h
src/gui/: CMakeLists.txt  dialogs.cpp  dialogs.h  gui.cpp  gui.h  gui_internal.cpp  gui_internal.h  icons.cpp  icons.h  main_menu_bar.cpp  main_menu_bar.h  modals.cpp  modals.h  mouse_cursor_handler.cpp  mouse_cursor_handler.h  node_context_menu.cpp  node_context_menu.h  style.cpp  style.h  window_3d.cpp  window_about.cpp  window_debug.cpp  window_element_properties.cpp  window_element_tree.cpp  window_gear_ratio_calculator.cpp  window_log.cpp  window_orientation_cube.cpp  window_part_palette.cpp  window_settings.cpp  window_sysinfo.cpp
src/helpers/: CMakeLists.txt  aabb.cpp  aabb.h  almost_comparations.cpp  almost_comparations.h  bounding_volumes.cpp  bounding_volumes.h  camera.cpp  camera.h  color.cpp  color.h  custom_hash.cpp  custom_hash.h  debug_nodes.cpp  debug_nodes.h  earcut_hpp_with_glm.h  file_downloader.cpp  file_downloader.h  fraction.cpp  fraction.h  geometry.cpp  geometry.h  glm_eigen_conversion.cpp  glm_eigen_conversion.h  graphviz_wrapper.cpp  graphviz_wrapper.h  json_helper.cpp  json_helper.h  palanteer_implementation.cpp  parts_library_downloader.cpp  parts_library_downloader.h  platform_detection.h  polygon_clipping.cpp  polygon_clipping.h  ray.cpp  ray.h  stringutil.cpp  stringutil.h  system_info.cpp  system_info.h  (+4 more)
src/info_providers/: CMakeLists.txt  bricklink_constants_provider.cpp  bricklink_constants_provider.h  part_color_availability_provider.cpp  part_color_availability_provider.h  price_guide_provider.cpp  price_guide_provider.h
src/ldr/: CMakeLists.txt  colors.cpp  colors.h  config.cpp  config.h  file_reader.cpp  file_reader.h  file_repo.cpp  file_repo.h  file_writer.cpp  file_writer.h  files.cpp  files.h  ldr_colors.cpp  ldr_colors.h  ldr_file_repo.cpp  ldr_file_repo.h  ldr_files.cpp  ldr_files.h  ldr_regular_file_repo.cpp  ldr_regular_file_repo.h  ldr_zip_file_repo.cpp  ldr_zip_file_repo.h  regular_file_repo.cpp  regular_file_repo.h  shadow_file_repo.cpp  shadow_file_repo.h  zip_file_repo.cpp  zip_file_repo.h
src/ldr_files/: CMakeLists.txt  ldr_colors.cpp  ldr_colors.h  ldr_file_repo.cpp  ldr_file_repo.h  ldr_file_repository.cpp  ldr_files.cpp  ldr_files.h  ldr_regular_file_repo.cpp  ldr_regular_file_repo.h  ldr_zip_file_repo.cpp  ldr_zip_file_repo.h
src/lib/: CMakeLists.txt  glad.c  glad_config.md
src/logging/: CMakeLists.txt  latest_log_messages_tank.cpp  latest_log_messages_tank.h  logger.cpp  logger.h
src/shaders/: line_shader.fsh  line_shader.vsh  optional_line_shader.gsh  optional_line_shader.vsh  overlay_shader.vsh  selection_shader.vsh  shader.cpp  shader.fsh  shader.h  shader.vsh  shaders.cpp  shaders.h  texture_shader.fsh  texture_shader.vsh  textured_triangle_selection_shader.vsh  textured_triangle_shader.fsh  textured_triangle_shader.vsh  triangle_selection_shader.vsh  triangle_shader.fsh  triangle_shader.vsh
src/snapping/: CMakeLists.txt  snap_common.cpp  snap_common.h  snap_const.cpp  snap_const.h  snap_handler.cpp  snap_handler.h  snap_linear.cpp  snap_linear.h  snap_rotational.cpp  snap_rotational.h  snap_to_connector.cpp  snap_to_connector.h
src/test/: CMakeLists.txt  catchMain.cpp  testFraction.cpp  testGears.cpp  testUtil.cpp  test_configuration_reader.cpp  test_fraction.cpp  test_gears.cpp  test_ldr_file_read.cpp  test_user_actions.cpp  test_util.cpp  testing_tools.h
src/tools/: CMakeLists.txt  gears.cpp  gears.h
(+362 files in other folders)
