target_sources(BrickSimLib PRIVATE
        config.cpp
        config.h
        controller.cpp
        controller.h
        custom_imconfig.h
        db.cpp
        db.h
        element_tree.cpp
        element_tree.h
        keyboard_shortcut_manager.cpp
        keyboard_shortcut_manager.h
        logging/latest_log_messages_tank.cpp
        logging/latest_log_messages_tank.h
        metrics.cpp
        metrics.h
        part_finder.cpp
        part_finder.h
        tasks.cpp
        tasks.h
        transform_gizmo.cpp
        transform_gizmo.h
        types.h
        user_actions.cpp
        user_actions.h
        )

add_subdirectory(benchmarks)
add_subdirectory(constant_data)
add_subdirectory(graphics)
add_subdirectory(gui)
add_subdirectory(helpers)
add_subdirectory(info_providers)
add_subdirectory(ldr)
add_subdirectory(lib)
add_subdirectory(logging)
add_subdirectory(test)
add_subdirectory(tools)