target_sources(BrickSimLib PRIVATE
        dialogs.cpp
        dialogs.h
        gui.cpp
        gui.h
        gui_internal.cpp
        gui_internal.h
        icons.cpp
        icons.h
        main_menu_bar.cpp
        main_menu_bar.h
        modals.cpp
        modals.h
        mouse_cursor_handler.cpp
        mouse_cursor_handler.h
        style.cpp
        style.h
        )
add_subdirectory(context_menu)
add_subdirectory(components)
add_subdirectory(graphical_transform)
add_subdirectory(windows)
